--- a/settings.gradle
+++ b/settings.gradle
@@ -19,4 +19,11 @@ include 'leetcode'
 include 'leetcode:lc-server'
 include 'leetcode:lc-server:lc-wrapper'
 findProject(':leetcode:lc-server:lc-wrapper')?.name = 'lc-wrapper'
+include 'sched'
+include 'sched:sched-server'
+findProject(':sched:sched-server')?.name = 'sched-server'
+include 'sched:sched-server:sched-core'
+findProject(':sched:sched-server:sched-core')?.name = 'sched-core'
+include 'sched:sched-server:sched-wrapper'
+findProject(':sched:sched-server:sched-wrapper')?.name = 'sched-wrapper'
 
